# JNIWrapperConcept

./: .gitignore
android/app/: CMakeLists.txt  proguard-rules.pro
android/app/src/androidTest/java/com/nomenas/wrapperconcept/: CallbackTests.java  ExtendClassFromJavaTest.java  InheritanceTests.java  MethodCallTests.java  SimpleClassTests.java  SmartPointerTests.java
android/app/src/main/cpp/: BaseClass.jni.cpp  BaseClass.jni.h  CallbackTester.jni.cpp  CallbackTester.jni.h  ExtendAndImplement.jni.cpp  ExtendAndImplement.jni.h  Integer.jni.cpp  Integer.jni.h  MultipleInheritance.jni.cpp  MultipleInheritance.jni.h  SimpleClass.jni.cpp  SimpleClass.jni.h  SingleInheritance.jni.cpp  SingleInheritance.jni.h  SingleInheritanceExt.jni.cpp  SingleInheritanceExt.jni.h  SmartPointers.jni.cpp  SmartPointers.jni.h
android/app/src/main/cpp/jni/: BaseClass.jni.cpp  ExtendAndImplement.jni.cpp  Integer.jni.cpp  SingleInheritanceExt.jni.cpp  SmartPointers.jni.cpp
android/app/src/main/cpp/jni_core/: Callback.h  Functional.h
android/app/src/main/cpp/project/: CallbackTester.h  MultipleInheritance.h  SingleInheritance.cpp
android/app/src/main/java/com/nomenas/wrapperconcept/project/: BaseClass.java  CallbackTester.java  Integer.java  SimpleClass.java  SimpleInterface.java  SingleInheritance.java  SingleInheritanceCustom.java  SingleInheritanceExt.java  SmartPointers.java
android/app/src/main/res/layout/: activity_main.xml
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/jni/: Proxy.h  (+15 more)
core/: ConverterCore.h
core/jni/: ArrayList.h  Callback.h  ClassInfo.h  ContainerConverters.h  Converter.cpp  Converter.h  Functional.h  JNIEnvFactory.h  JNIInit.cpp  ObjectConverters.h  Proxy.h  SmartPointerConverters.h  jni_core.h
core/objc/: Clone.h  Converter.h  Converter.mm  Functional.h  ObjectConverters.h  Proxy.h  objc_core.h
framework/jni_core/: ClassInfo.h  Converters.h  ObjectConverters.h  SmartPointerConverters.h  jni_core.h
framework/objc_core/: ObjectHolder.cpp  ObjectHolder.h
gradle/wrapper/: gradle-wrapper.properties
objc/Tests/: CallbackTests.m  SimpleClassTests.m  SmartPointersTests.m
objc/Untitled.xcworkspace/: contents.xcworkspacedata
objc/objc/: OCWCallback.h  OCWCallbackTester-internal.h  OCWCallbackTester.h  OCWCallbackTester.mm  OCWInteger-internal.h  OCWInteger.h  OCWInteger.mm  OCWSimpleClass-internal.h  OCWSimpleClass.h  OCWSimpleClass.mm  OCWSmartPointers-internal.h  OCWSmartPointers.h  OCWSmartPointers.mm
objc/objc.xcodeproj/: project.pbxproj
project/: CallbackTester.cpp  CallbackTester.h  Integer.h  MultipleInheritance.cpp  MultipleInheritance.h  SimpleClass.cpp  SimpleClass.h  SimpleInterface.h  SingleInheritance.cpp  SingleInheritance.h  SmartPointers.cpp  SmartPointers.h
(+47 files in other folders)
